# pmo_stacklab

./: .gitattributes  .gitignore  pyproject.toml
.claude/: launch.json
docs/: README.md
pmo_stacklab/: main.py
pmo_stacklab/gui/frames/: __init__.py  home.py
pmo_stacklab/gui/frames/calibrate_tab/: main_calibrate.py
pmo_stacklab/gui/frames/home_tab/: main_home.py
pmo_stacklab/gui/frames/postprocess_tab/: main_postprocess.py
pmo_stacklab/gui/frames/reproject_tab/: main_reproject.py
pmo_stacklab/gui/windows/: home.py
pmo_stacklab/src/: core.py
pmo_stacklab/src/io/: inspect_fits.py
pmo_stacklab/src/modules/: stack.py
pmo_stacklab/src/utils/: folder2ccd.py
pmo_stacklab/static/css/: styles.css
pmo_stacklab/templates/: calibrate.html  home.html  reproject.html  stack.html  upload.html
src/pmo_stacklab/: __init__.py  __main__.py
src/pmo_stacklab/app/: __init__.py  config.py  factory.py  lifecycle.py  quickstack.py  store.py  utils.py
src/pmo_stacklab/modules/: __init__.py
src/pmo_stacklab/server/: api.py
src/pmo_stacklab/static/js/: api.js  (+9 more)
src/pmo_stacklab/templates/: calibrate.html  color.html  home.html  postprocess.html  reproject.html  stack.html  upload.html
test/: test_algorithms.py  test_calibrate.py  test_color.py  test_endpoint.py  test_error_handling.py  test_frontend.py  test_metrics.py  test_parameters.py  test_pipeline.py  test_pipeline_errors.py  test_post_process.py  test_preview.py  test_process.py  test_process_spec.py  test_quickstack.py  test_registry.py  test_reproject.py  test_stack.py  test_store.py  test_upload.py
(+59 files in other folders)
